# Embedded_system_project

./: CMakeLists.txt  DIAGRAMS_PLANTUML.md  FREERTOS_ANALYSIS.md
component/esp-idf-ssd1306/: .gitignore  README.md
component/esp-idf-ssd1306/AnimationDemo/: README.md
component/esp-idf-ssd1306/BalloonDemo/: README.md
component/esp-idf-ssd1306/BdfFontDemo/: README.md  bdf2c.c
component/esp-idf-ssd1306/BenchMark/: README.md  sdkconfig.defaults
component/esp-idf-ssd1306/BlinkIconDemo/: README.md
component/esp-idf-ssd1306/CarRaceDemo/: README.md
component/esp-idf-ssd1306/CounterDemo/: README.md
component/esp-idf-ssd1306/DeviceAddDemo/: README.md
component/esp-idf-ssd1306/FreeTypeDemo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
component/esp-idf-ssd1306/HighwayDemo/: README.md
component/esp-idf-ssd1306/ImageDemo/: README.md
component/esp-idf-ssd1306/ImageMoveDemo/: README.md
component/esp-idf-ssd1306/ImageRotationDemo/: README.md
component/esp-idf-ssd1306/ImageScrollDemo/: README.md
component/esp-idf-ssd1306/KeyboardDemo/: README.md
component/esp-idf-ssd1306/MeterDemo/: README.md
component/esp-idf-ssd1306/MouseIconDemo/: README.md
component/esp-idf-ssd1306/MouseMoveDemo/: README.md
component/esp-idf-ssd1306/MouseSelectDemo/: README.md
component/esp-idf-ssd1306/MultiDeviceDemo/: README.md
component/esp-idf-ssd1306/PageDemo/: README.md
main/: CMakeLists.txt  button_handler.c  button_handler.h  idf_component.yml  main.c  oled_manager.c  sensor_system.c  sensor_system.h  ssd1306_i2c_new.c
(+54 files in other folders)
